Fitting with 4 bands, wdf converter

--- a/config/config.ini
+++ b/config/config.ini
@@ -3,11 +3,17 @@ degree = 3
 threshold = 30
 font_size = 14
 dark = 1
+abs = 0
 
 [LIMITS]
 low = 650
 high = 2300
 
 [PEAK]
-low = 1000
-high = 1800
+low = 900
+high = 1850
+
+[SKIP_REGION]
+skip = 1
+low = 2100
+high = 2200
